--- a/app/src/main/res/drawable/bg_player_dark.xml
+++ b/app/src/main/res/drawable/bg_player_dark.xml
@@ -1,7 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/md_black_1000" />
-    <corners android:radius="12dp" />
+    <solid android:color="@color/daynight_white_grey" />
     <padding
         android:bottom="16dp"
         android:left="16dp"
