--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/secondary_bg"
-    tools:context=".ui.onBoarding.OnBoardingActivity">
+    tools:context=".ui.onboarding.OnBoardingActivity">
 
     <Button
         android:id="@+id/skip"
