Hide notification badge until count available

--- a/app/src/main/res/layout/custom_notification_badge.xml
+++ b/app/src/main/res/layout/custom_notification_badge.xml
@@ -21,7 +21,7 @@
         android:background="@drawable/badge_background"
         android:gravity="center"
         android:padding="3dp"
-        android:text="0"
+        android:visibility="gone"
         android:textColor="@android:color/white"
         android:textSize="10sp" />
 </FrameLayout>
