--- a/app/src/main/res/layout/fragment_take_exam.xml
+++ b/app/src/main/res/layout/fragment_take_exam.xml
@@ -298,4 +298,12 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progress_submission"
+        style="@style/Widget.AppCompat.ProgressBar.Large"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone" />
+
 </FrameLayout>
