--- a/app/src/main/res/layout/row_news.xml
+++ b/app/src/main/res/layout/row_news.xml
@@ -129,6 +129,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/padding_normal"
                     android:ellipsize="end"
                     android:maxLines="6"
                     android:padding="@dimen/padding_normal"
