Fix rating user status text size dimen

--- a/app/src/main/res/layout/fragment_rating.xml
+++ b/app/src/main/res/layout/fragment_rating.xml
@@ -72,7 +72,7 @@
             android:layout_weight="1"
             android:text="@string/loading_user_profile"
             android:textColor="@color/daynight_textColor"
-            android:textSize="@dimen/text_size_medium" />
+            android:textSize="@dimen/text_size_mid" />
     </LinearLayout>
 
     <LinearLayout
