--- a/app/src/main/res/layout/fragment_take_exam.xml
+++ b/app/src/main/res/layout/fragment_take_exam.xml
@@ -300,7 +300,7 @@
     </LinearLayout>
     <ProgressBar
         android:id="@+id/progress_submission"
-        style="?attr/progressBarStyleLarge"
+        style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
