--- a/app/src/main/res/layout/fragment_rating.xml
+++ b/app/src/main/res/layout/fragment_rating.xml
@@ -16,7 +16,6 @@
         android:text="@string/your_rating"
         android:textSize="@dimen/text_size_large"
         android:textColor="@color/hint_color" />
-
     <androidx.appcompat.widget.AppCompatRatingBar
         android:id="@+id/rating_bar"
         android:layout_width="wrap_content"
@@ -25,7 +24,6 @@
         android:max="5"
         android:stepSize="1"
         android:theme="@style/RatingBar" />
-
     <TextView
         android:id="@+id/ratingError"
         android:layout_width="wrap_content"
@@ -34,7 +32,6 @@
         android:visibility="gone"
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/text_size_large" />
-
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,6 +47,31 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
+        android:id="@+id/user_status_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="@dimen/padding_normal"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/user_status_progress"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/user_status_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/padding_small"
+            android:layout_weight="1"
+            android:text="@string/loading_user_profile"
+            android:textColor="@color/daynight_textColor"
+            android:textSize="@dimen/text_size_mid" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right">
@@ -62,7 +84,14 @@
             android:layout_marginRight="10dp"
             android:background="@drawable/buttongrey"
             android:text="@string/button_submit" />
-
+        <ProgressBar
+            android:id="@+id/submit_progress"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="center_vertical"
+            android:visibility="gone" />
         <Button
             android:id="@+id/btn_cancel"
             style="@style/GreyButtons"
@@ -70,7 +99,5 @@
             android:layout_height="wrap_content"
             android:background="@drawable/buttongrey"
             android:text="@string/button_cancel" />
-
     </LinearLayout>
-
 </LinearLayout>
