--- a/app/src/main/res/layout/fragment_library_detail.xml
+++ b/app/src/main/res/layout/fragment_library_detail.xml
@@ -71,9 +71,9 @@
                         android:layout_height="@dimen/_50dp"
                         android:layout_gravity="center_vertical"
                         android:background="@drawable/buttonyellow"
-                        android:contentDescription="@string/remove"
+                        android:contentDescription="@string/btn_remove_lib"
                         android:src="@drawable/close_x"
-                        android:text="@string/remove"
+                        android:text="@string/btn_remove_lib"
                         app:tint="@color/md_black_1000" />
                 </LinearLayout>
 
