--- a/app/src/main/res/layout/fragment_send_survey.xml
+++ b/app/src/main/res/layout/fragment_send_survey.xml
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:text="@string/btn_sync_cancel"
+                android:text="@string/txt_cancel"
                 android:theme="@style/PrimaryButton" />
             <Button
                 android:id="@+id/send_survey"
