--- a/app/src/main/res/layout/fragment_take_course.xml
+++ b/app/src/main/res/layout/fragment_take_course.xml
@@ -73,7 +73,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/buttonyellow"
                         android:minHeight="@dimen/_40dp"
-                        android:text="@string/btn_remove_lib" />
+                        android:text="@string/remove" />
 
                     <TextView
                         android:id="@+id/previous_step"
