--- a/app/src/main/res/layout/alert_task.xml
+++ b/app/src/main/res/layout/alert_task.xml
@@ -28,13 +28,26 @@
         android:paddingRight="@dimen/padding_normal"
         android:text="@string/deadline_required"
         android:textColor="@color/daynight_textColor" />
-
     <TextView
         android:id="@+id/tv_pick"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/padding_normal"
         android:text="@string/click_here_to_pick_date"
+        android:textColor="@color/hint_color" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/padding_normal"
+        android:paddingRight="@dimen/padding_normal"
+        android:text="@string/assign_to"
+        android:textColor="@color/daynight_textColor" />
+    <TextView
+        android:id="@+id/tv_assign_member"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/padding_normal"
+        android:text="@string/click_to_assign_member"
         android:textColor="@color/hint_color" />
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -50,5 +63,4 @@
             android:textColor="@color/daynight_textColor"
             android:backgroundTint="@color/hint_color" />
     </com.google.android.material.textfield.TextInputLayout>
-
 </LinearLayout>
