--- a/app/src/main/res/layout/fragment_chat_detail.xml
+++ b/app/src/main/res/layout/fragment_chat_detail.xml
@@ -85,7 +85,7 @@
             android:textColor="@color/daynight_textColor"
             android:textColorHint="@color/hint_color"
             tools:ignore="Autofill" />
-        <ProgressBar
+        <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/image_gchat_loading"
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -93,7 +93,9 @@
             android:layout_marginEnd="4dp"
             android:layout_toStartOf="@+id/button_gchat_send"
             android:indeterminate="true"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            app:indicatorColor="@color/mainColor"
+            app:indicatorSize="36dp" />
         <ImageView
             android:id="@+id/button_gchat_send"
             android:layout_width="30dp"
