--- a/app/src/main/res/layout/alert_health_list.xml
+++ b/app/src/main/res/layout/alert_health_list.xml
@@ -51,12 +51,17 @@
             android:textColor="@color/daynight_textColor" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <ProgressBar
+        android:id="@+id/search_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone" />
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:choiceMode="singleChoice" />
-
     <ProgressBar
         android:id="@+id/loading"
         android:layout_width="wrap_content"
