--- a/app/src/main/res/layout/activity_textfile_viewer.xml
+++ b/app/src/main/res/layout/activity_textfile_viewer.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="org.ole.planet.myplanet.ui.viewer.TextFileViewerActivity">
-
+    tools:context="org.ole.planet.myplanet.ui.reader.TextFileViewerActivity">
 
     <TextView
         android:id="@+id/textFileName"
@@ -16,8 +15,6 @@
         android:textColor="@color/md_black_1000"
         android:textSize="@dimen/text_size_large"
         android:textStyle="bold" />
-
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -35,5 +32,4 @@
                 android:layout_height="match_parent" />
         </LinearLayout>
     </ScrollView>
-
 </LinearLayout>
